# final-project-breeze-tech

./: README.md  pyproject.toml
examples/: class_example.py  import_plot.py  main.py  main_py  short.py
inputs/: bem_model.py
src/: __init__.py  bem_model.py  data_io.py
src/windbem/: __init__.py  compute.py  data_io.py
tests/: conftest.py  test__init__.py  test_compute.py  test_data_io.py
